--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Rock Paper Scissors Gme</title>
+        <title>Rock Paper Scissors Game</title>
     </head>
     <body>
         <header>
