--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors Game</title>
+        <link rel = "stylesheet" type = "text/css" href = "styles.css" />
+        <link href="https://fonts.googleapis.com/css?family=Asap:400,500,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
