--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         </div>
 
         <p id="action-message">Make Your Move.</p>
+        <script src="app.js" charset="uft-8"></script>
     </body>
 </html>
